error state for noc

--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -12,92 +12,104 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
+                {% if data.servicedown == 'true' %}
+                <h1  class="govuk-heading-l">Something went wrong</h1>
+
+                <p>Our service has stopped working.</p>
+                <p>Please try again in a few hours.</p>
+
+                <p><a href="caselist">View case list</a></p>
+
+                {% else %}
+
+                        {% if data.autoapproved == 'true' %}
+                            <div class="govuk-panel govuk-panel--confirmation">
+                            <!-- Automatic approval -->
+                            <h1 class="govuk-panel__title">
+
+                                {% if data.adminonly == 'true' %}
+                                    Notice of change request successful<br><br>
+                                    <div class="govuk-panel__body">
+                                        The case is not shared with anyone
+                                    </div>
+                                {% else %}
+                                    Notice of change successful<br><br>
+                                    <div class="govuk-panel__body">
+                                        You’re now the representative of case <br>{{data.casenumber}}
+                                    </div>
+                                {% endif %}
+                            </h1>
+                        {% endif %}
+
+                        <!-- Approval needed -->
+                        {% if data.autoapproved == 'false' %}
+                            {% if data.inreview == 'true' %}
+                                <div class="govuk-panel govuk-panel--confirmation">
+                                    <h1 class="govuk-panel__title">
+                                        Notice of change request submitted<br><br>
+                                        <div class="govuk-panel__body">
+                                            Wait for us to review this request
+                                        </div>
+                                    </h1>
+                            {% else %}
+                                <div>
+                                    <h1  class="govuk-heading-l">Request rejected</h1>
+                            {% endif %}
+
+                        {% endif %}
+                    </div>
 
                     {% if data.autoapproved == 'true' %}
-                        <div class="govuk-panel govuk-panel--confirmation">
                         <!-- Automatic approval -->
-                        <h1 class="govuk-panel__title">
+                        <p class="govuk-body govuk-!-margin-top-6">We've  emailed the person who previously represented the case.</p>
 
-                            {% if data.adminonly == 'true' %}
-                                Notice of change request successful<br><br>
-                                <div class="govuk-panel__body">
-                                    The case is not shared with anyone
-                                </div>
+                        <h2 class="govuk-heading-m ">What happens next</h2>
+
+                        {% if data.adminonly == 'true' %}
+                            <p class="govuk-body">
+                                You'll need to share the case with someone.
+                            </p>
+                            <p class="govuk-body"><a href="#">Share this case</a></p>
+                        {% else %}
+                            <p class="govuk-body">
+                                This case will now appear in your case list.
+                            </p>
+
+                            {% if data.divorcecaselist == 'true'%}
+                                <p class="govuk-body"> <a href="casedetailsdivorce?newcaseselected=true&">View this case</a></p>
                             {% else %}
-                                Notice of change successful<br><br>
-                                <div class="govuk-panel__body">
-                                    You’re now the representative of case <br>{{data.casenumber}}
-                                </div>
+                                <p class="govuk-body"> <a href="casedetailsprobate?newcaseselected=true&">View this case</a></p>
                             {% endif %}
-                        </h1>
+
+                            <p class="govuk-body"><a href="caselist">View case list</a></p>
+
+                        {% endif %}
+
                     {% endif %}
 
-                    <!-- Approval needed -->
+
+                    <!-- When approval is needed  -->
                     {% if data.autoapproved == 'false' %}
                         {% if data.inreview == 'true' %}
-                            <div class="govuk-panel govuk-panel--confirmation">
-                                <h1 class="govuk-panel__title">
-                                    Notice of change request submitted<br><br>
-                                    <div class="govuk-panel__body">
-                                        Wait for us to review this request
-                                    </div>
-                                </h1>
+                            <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
+                            <p>Will decide to accept or reject your request.</p>
+                            <p class="govuk-inset-text">You won't be notified when this happens.</p>
+                            <p>If your request is accepted the case will appear in your caselist.</p>
+                            <p class="govuk-body">
+                                <a href="caselist">View case list</a>
+                            </p>
                         {% else %}
-                            <div>
-                                <h1  class="govuk-heading-l">Request rejected</h1>
+                            <p>Notice of change request has been rejected.</p>
+                            <p>This may be because you entered incorrct details.</p>
+                            <p>Please <a href="#">try again</a> or <a href="#">contact HMCTS</a>.</p>
+                            <p><a href="caselist">View case list</a></p>
                         {% endif %}
 
                     {% endif %}
+
                 </div>
+            {% endif %}
 
-                {% if data.autoapproved == 'true' %}
-                    <!-- Automatic approval -->
-                    <p class="govuk-body govuk-!-margin-top-6">We've  emailed the person who previously represented the case.</p>
-
-                    <h2 class="govuk-heading-m ">What happens next</h2>
-
-                    {% if data.adminonly == 'true' %}
-                        <p class="govuk-body">
-                            You'll need to share the case with someone.
-                        </p>
-                        <p class="govuk-body"><a href="#">Share this case</a></p>
-                    {% else %}
-                        <p class="govuk-body">
-                            This case will now appear in your case list.
-                        </p>
-
-                        {% if data.divorcecaselist == 'true'%}
-                            <p class="govuk-body"> <a href="casedetailsdivorce?newcaseselected=true&">View this case</a></p>
-                        {% else %}
-                            <p class="govuk-body"> <a href="casedetailsprobate?newcaseselected=true&">View this case</a></p>
-                        {% endif %}
-
-                        <p class="govuk-body"><a href="caselist">View case list</a></p>
-
-                    {% endif %}
-
-                {% endif %}
-
-
-                <!-- When approval is needed  -->
-                {% if data.autoapproved == 'false' %}
-                    {% if data.inreview == 'true' %}
-                        <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
-                        <p>Will decide to accept or reject your request.</p>
-                        <p class="govuk-inset-text">You won't be notified when this happens.</p>
-                        <p>If your request is accepted the case will appear in your caselist.</p>
-                        <p class="govuk-body">
-                            <a href="caselist">View case list</a>
-                        </p>
-                    {% else %}
-                        <p>Notice of change request has been rejected.</p>
-                        <p>This may be because X, Y, or Z</p>
-                        <p><a href="caselist">View case list</a></p>
-                    {% endif %}
-
-                {% endif %}
-
-            </div>
         </div>
     </main>
 
@@ -107,21 +119,25 @@ Case details
     <form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
         <select style="height:25px;" onchange="window.location.href='?'+this.value">
 
-            <option value="autoapproved=true&adminonly=false&"
+            <option value="autoapproved=true&adminonly=false&servicedown=false&"
                     {% if data.autoapproved == 'true' and data.adminonly == 'false' %}selected{% endif %}
             >Automatically accpeted</option>
 
-            <option value="autoapproved=true&adminonly=true&"
+            <option value="autoapproved=true&adminonly=true&servicedown=false&"
                     {% if data.autoapproved == 'true' and data.adminonly == 'true'  %}selected{% endif %}
             >Automatically accpeted - Case access admin</option>
 
-            <option value="autoapproved=false&caseadded=false&inreview=true&"
+            <option value="autoapproved=false&caseadded=false&inreview=true&servicedown=false&"
                     {% if data.autoapproved == 'false' and  data.inreview == 'true'  %}selected{% endif %}
             >Being reviewed</option>
 
-            <option value="autoapproved=false&caseadded=false&inreview=false&"
+            <option value="autoapproved=false&caseadded=false&inreview=false&servicedown=false&"
                     {% if data.autoapproved == 'false' and  data.inreview == 'false' %}selected{% endif %}
             >Rejected</option>
+
+            <option value="servicedown=true&"
+                    {% if data.servicedown == 'true' %}selected{% endif %}
+            >Service down</option>
 
         </select>
     </form>
