additional second event showing in case

--- a/app/views/noticeofchange/solicitor/casedetailsdivorce.html
+++ b/app/views/noticeofchange/solicitor/casedetailsdivorce.html
@@ -103,8 +103,13 @@ Case details
                                     <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
                                     <td class="govuk-table__cell">Peter Bach</td>
                                 </tr>
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change request</a></td>
+                                    <td class="govuk-table__cell" style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
+                                    <td class="govuk-table__cell">Alex Smith</td>
+                                </tr>
                                 <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
-                                    <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change</a></td>
+                                    <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change confirmed</a></td>
                                     <td class="govuk-table__cell" style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
                                     <td class="govuk-table__cell">Alex Smith</td>
                                 </tr>
@@ -134,7 +139,7 @@ Case details
                                     <p style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</p>
                                     <p>Alex Smith</p>
                                     <p>Case transferred to new solicitor</p>
-                                    <p>Notice of change</p>
+                                    <p>Notice of change confirmed</p>
                                     <p>-</p>
                                     <p>-</p>
                                 </div>
