--- a/app/views/noticeofchange/solicitor/casedetailsprobate.html
+++ b/app/views/noticeofchange/solicitor/casedetailsprobate.html
@@ -86,8 +86,13 @@ Case details
                                         <td class="govuk-table__cell" style="text-decoration: underline;">17 May 2020, 3:49:22 PM</td>
                                         <td class="govuk-table__cell">Doug Jones</td>
                                     </tr>
+                                    <tr class="govuk-table__row">
+                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change request</a></td>
+                                        <td class="govuk-table__cell" style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
+                                        <td class="govuk-table__cell">Alex Smith</td>
+                                    </tr>
                                     <tr class="govuk-table__row" style="border-left: 4px solid #005ea5; background-color: rgba(0,94,165,0.2); ">
-                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change</a></td>
+                                        <td class="govuk-table__cell">&nbsp;&nbsp;<a href="">Notice of change confirmed</a></td>
                                         <td class="govuk-table__cell" style="text-decoration: underline;">{{ data['todaydate'] }}, {{ data.todaydatetime }}</td>
                                         <td class="govuk-table__cell">Alex Smith</td>
                                     </tr>
