updates to remove journey

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -9,26 +9,39 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-         Notice of change
-      </h1>
+        <h1 class="govuk-heading-xl">
+            Notice of change
+        </h1>
 
-      <p>Solicitor<br>
-          <a href="noticeofchange/solicitor/caselist">Case list</a><br>
-      </p>
+        <p>Solicitor<br>
+            <a href="noticeofchange/solicitor/caselist">Case list</a><br>
+        </p>
 
-      <br>
+        <br>
 
-        <p>Email - Solicitor who is being replaced<br>
+        <p>Email - To solicitor who is being replaced<br>
             <a href="">They are now off record</a><br>
         </p>
 
+        <p>Email - To solicitor who took themselves off record<br>
+            <a href="">They are now off record</a><br>
+        </p>
 
-      <p>Email - Citizen - After solicitor stop representing<br>
-         <a href="">Already registered with IDAM</a><br>
-         <a href="">Not registered with IDAM</a><br>
-         <a href="">When case goes to paper</a>
-      </p>
+        <br>
+        <br>
+
+        <p><span class="govuk-!-font-weight-bold">Blocked by details froms services</span><br>
+            Email - After caseworker approval<br>
+            <a href="">Rejected</a><br>
+            <a href="">Approved</a><br>
+        </p>
+
+        <p><span class="govuk-!-font-weight-bold">Blocked by business</span><br>
+            Email - Citizen - After solicitor stop representing <br>
+             <a href="">Already registered with IDAM</a><br>
+             <a href="">Not registered with IDAM</a><br>
+             <a href="">When case goes to paper</a>
+        </p>
 
     </div>
 </div>
