--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -15,7 +15,8 @@ Case details
                 {% if data.servicedown == 'true' %}
                 <h1  class="govuk-heading-l">Something went wrong</h1>
 
-                <p>Our service has stopped working.</p>
+                <p>This service has stopped working.</p>
+                <p>Your request has not been submitted.</p>
                 <p>Please try again in a few hours.</p>
 
                 <p><a href="caselist">View case list</a></p>
