--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -38,7 +38,7 @@ Case details
                 <tbody class="govuk-table__body">
                 {% if data.caseadded == 'true' %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?newcaseselected=true&">{{ data.casenumber }}</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?newcaseselected=true">{{ data.casenumber }}</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">825784LL</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Martin</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Narran</td>
@@ -50,7 +50,7 @@ Case details
                 {% if data.hideone == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&newcaseselected=false&casetohide=a&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3689-2642-5857-7069&newcaseselected=false&casetohide=a&clientname=Anne Yang&">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">AY-34137102</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Yang</td>
@@ -62,7 +62,7 @@ Case details
                 {% if data.hidetwo == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&newcaseselected=false&casetohide=b&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=1593-0136-4696-9976&newcaseselected=false&casetohide=b&clientname=Ethel Williams&">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">EW-6671238</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Williams</td>
@@ -74,10 +74,10 @@ Case details
                 {% if data.hidethree == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&newcaseselected=false&casetohide=c&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsprobate?casenumberselected=3827-2010-3565-3933&newcaseselected=false&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">NJ-7982475</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Norman</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jones</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020 </td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
                     </tr>
@@ -249,7 +249,7 @@ Case details
                 {% if data.hideone == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&clientname=James Smith&">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Feb 2020, 9:50:28 AM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">James</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Smith</td>
@@ -265,7 +265,7 @@ Case details
                 {% if data.hidetwo == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&clientname=Mary Hoyle&">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020, 1:48:33 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Mary</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Hoyle</td>
@@ -281,7 +281,7 @@ Case details
                 {% if data.hidethree == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">2 Dec 2019, 4:23:50 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Higham</td>
