Scenario 1 - email added

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -13,8 +13,42 @@
             Notice of change
         </h1>
 
+
+        <p><a href="solicitor/emailofremoved">Scenario 1</a></p>
+
+
+
+
+
+
+
+        <br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br>
+        <br><br>
+        <br><br><br><br>
+        <br><br><br><br><br><br>
+        <br><br>
+        <br><br>
+        <br><br>
+        <br><br><br><br>
+        <br><br>
+
+
+
+
+
+
+
+
+
+
+
         <p>Solicitor<br>
-            <a href="noticeofchange/solicitor/caselist">Case list</a><br>
+            <a href="solicitor/caselist">Case list</a><br>
         </p>
 
         <br>
