--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -14,11 +14,20 @@
         </h1>
 
 
-        <p><a href="solicitor/emailofremoved">Scenario 1</a></p>
 
 
 
 
+        <p><a href="/noticeofchange/solicitor/emailofremoved">Scenario 1</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=auto&">Scenario 3.1</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=approval&">Scenario 3.2</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?autoapproved=true&adminonly=false&servicedown=false&">Scenario 5</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&">Scenario 6</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&hideone=true&hidetwo=true&hidethree=true&">Scenario 7</a></p>
 
 
 
