fixes to bug and case type scenarios

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -16,19 +16,34 @@
 
 
 
-
+        <p class="govuk-!-font-weight-bold">Divorce</p>
 
         <p><a href="/noticeofchange/solicitor/emailofremoved">Scenario 1</a></p>
 
-        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=auto&">Scenario 3.1</a></p>
-        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=approval&">Scenario 3.2</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=auto&caselist=divorce&">Scenario 3.1</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=approval&caselist=divorce&">Scenario 3.2</a></p>
 
-        <p><a href="/noticeofchange/solicitor/caselist?autoapproved=true&adminonly=false&servicedown=false&">Scenario 5</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?autoapproved=true&adminonly=false&servicedown=false&caselist=divorce&">Scenario 5</a></p>
 
-        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&">Scenario 6</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&caselist=divorce&">Scenario 6</a></p>
 
-        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&hideone=true&hidetwo=true&hidethree=true&">Scenario 7</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&hideone=true&hidetwo=true&hidethree=true&caselist=divorce&">Scenario 7</a></p>
 
+        <br>
+        <br>
+
+        <p class="govuk-!-font-weight-bold">Probate</p>
+
+        <p><a href="/noticeofchange/solicitor/emailofremoved">Scenario 1</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=auto&caselist=probate&">Scenario 3.1</a></p>
+        <p><a href="/noticeofchange/solicitor/caselist?stoppingoutcome=approval&caselist=probate&">Scenario 3.2</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?autoapproved=true&adminonly=false&servicedown=false&caselist=probate&">Scenario 5</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=true&caselist=probate&">Scenario 6</a></p>
+
+        <p><a href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&hideone=true&hidetwo=true&hidethree=true&caselist=probate&">Scenario 7</a></p>
 
 
         <br>
